Fikset collectors toList.